Fixes #204: Correcting alignment of the plus icons

--- a/css/local.sass
+++ b/css/local.sass
@@ -516,6 +516,7 @@ p, li
             border-radius: 2px
             overflow: hidden
             text-overflow: ellipsis
+            vertical-align: -40%
 
             @each $type in $datatypes
               &.#{nth($type, 1)}
